--- a/booksmith_proj/static/css_files/cart.css
+++ b/booksmith_proj/static/css_files/cart.css
@@ -74,6 +74,7 @@
   background-color: #c0392b; 
   color: white; 
   padding: 10px;
+  border: none;
   text-align: center;
   text-decoration: none; 
   border-radius: 5px;
@@ -95,9 +96,6 @@
 }
 .btn-remove:hover {
   background-color: #ff1a1a;
-}
-.item-quantity{
-  margin-left: 20px;
 }
 .item-price{
   margin-right: 10px;
@@ -134,4 +132,10 @@
 .item-author {
   color: gray; 
   font-size: 12px;
+}
+.btn-quantity{
+  border: 1px solid black;
+  border-radius: 50px ;
+  height: 20px;
+  width: 20px;
 }
