--- a/booksmith_proj/static/css_files/profile.css
+++ b/booksmith_proj/static/css_files/profile.css
@@ -136,3 +136,84 @@
 .data:last-child {
   border-right: none;
 }
+
+.books-container {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+  flex-wrap: wrap;
+}
+
+.book-card {
+  position: relative;
+  width: 280px;
+  height: 400px;
+  overflow: hidden;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.book-card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.book-info {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.808);
+  color: #fff;
+  text-align: center;
+  padding: 10px;
+  transition: background 0.3s;
+}
+
+.book-card:hover .book-info {
+  background: rgb(0, 0, 0);
+}
+
+.book-info h3 {
+  margin: 5px 0;
+  font-size: 16px;
+}
+
+.book-info p {
+  display: inline;
+  margin: 5px 0;
+  padding: 5px 10px;
+  font-size: 18px;
+  font-weight: bold;
+
+  color: #bd2000;
+}
+
+.book-info p s {
+  color: #727171;
+  font-size: 16px;
+  margin: 0 auto;
+}
+
+.book-info p {
+  margin: 0 auto;
+  font-size: 18px;
+  font-weight: bold;
+  color: #bd2000;
+}
+
+.book-info button {
+  background-color: #bd2000;
+  color: #fff;
+  border: none;
+  padding: 15px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 14px;
+  transition: background-color 0.3s;
+}
+
+.book-info button:hover {
+  background-color: #d62828;
+}
