--- a/booksmith_proj/templates/accounts/cart.html
+++ b/booksmith_proj/templates/accounts/cart.html
@@ -54,7 +54,9 @@
                 <span>Subtotal</span>
                 <ul class="price-list">
                     {% for item in cart_items %}
-                    <li>${{ item.book.price|floatformat:2 }}</li>
+                    <li>
+                        <p>${{ item.new_price|floatformat:2 }}</p>
+                    </li>
                     {% endfor %}
                 </ul>
             </div>
