--- a/booksmith_proj/templates/product_detail.html
+++ b/booksmith_proj/templates/product_detail.html
@@ -2,6 +2,7 @@
 Detail{%endblock %} {% block extra_css %}
 <link rel="stylesheet" href="{% static 'css_files/product_detail.css' %}" />
 {% endblock %} {% block content %}
+
 <div class="container">
   <div class="title">PRODUCT DETAIL</div>
   <div class="detail">
@@ -35,4 +36,6 @@ Detail{%endblock %} {% block extra_css %}
     {% endfor %}
   </div>
 </div>
+
+<script src="https://cdn.tailwindcss.com"></script>
 {% endblock %}
