--- a/booksmith_proj/static/css_files/landing_page.css
+++ b/booksmith_proj/static/css_files/landing_page.css
@@ -42,6 +42,7 @@ svg {
   top: 20%;
   width: 500px;
   max-width: 80%;
+  margin-bottom: 60px;
   z-index: 1;
 }
 .slider .list .item .content p:nth-child(1) {
@@ -49,7 +50,7 @@ svg {
   letter-spacing: 10px;
 }
 .slider .list .item .content h2 {
-  font-size: 100px;
+  font-size: 70px;
   margin: 0;
 }
 .slider .list .item.active {
@@ -100,6 +101,7 @@ svg {
   color: black;
 }
 .thumbnail {
+  margin-top: 50px;
   position: absolute;
   bottom: 50px;
   z-index: 11;
@@ -160,7 +162,8 @@ svg {
   background-color: #bd2000; /* Button background color */
   color: #ffffff; /* Button text color */
   border: none;
-  padding: 20px 20px;
+  padding: 17px 17px;
+  font-size: 10px;
   border-radius: 5px;
   font-size: 1em;
   cursor: pointer;
@@ -498,7 +501,6 @@ svg {
   color: #bd2000; /* Different color for the discount price */
 }
 
-
 /*js file.css for animation
 .image-carior {
   position: absolute;
@@ -564,4 +566,24 @@ svg {
     top: -305px;
     left: -45px;
   }
+}
+
+/* Base style for the wishlist button */
+.btn.wishlist-btn {
+  background: none;
+  border: none;
+  font-size: 24px; /* Adjust font size as needed */
+  color: #666; /* Default color */
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+/* Hover effect for the non-wishlisted state */
+.btn.wishlist-btn:hover {
+  color: #ff7070; /* Lighter red on hover */
+}
+
+/* Wishlisted state styling */
+.btn.wishlist-btn.wishlisted {
+  color: #ff3b3b; /* Highlight color for wishlisted books */
 }
