--- a/booksmith_proj/static/css_files/readbook.css
+++ b/booksmith_proj/static/css_files/readbook.css
@@ -56,3 +56,15 @@ h1 {
   justify-content: center;
   padding: 10px 0; /* Add padding for spacing from content */
 }
+
+/* new code for paged.js */
+
+.paged-content {
+  max-width: 800px;
+  margin: auto;
+  padding: 2em;
+}
+
+@page {
+  margin: 1cm;
+}
