--- a/booksmith_proj/templates/category_books.html
+++ b/booksmith_proj/templates/category_books.html
@@ -1,18 +1,28 @@
-{% extends 'base.html' %} {% block title %}Books in {{ category }}{% endblock %}
-{% block content %}
+{% extends 'base.html' %} {% load static %} {% block title %}Books in {{
+category }}{% endblock %} {% block extra_css %}
+<link rel="stylesheet" href="{% static 'css_files/category_books.css' %}" />
+{% endblock %} {% block content %}
 <h1>Books in {{ category }}</h1>
-<div class="books-grid">
-  {% for book in books %}
-  <div class="book-item">
-    <a href="{% url 'product_detail' book.pk %}">
-      <img src="{{ book.thumbnail_image_url }}" alt="{{ book.title }}" />
-      <h2>{{ book.title }}</h2>
-    </a>
-    <p>{{ book.author }}</p>
-    <p>${{ book.discounted_price }}</p>
+<div class="books-container">
+  {% if books %} {% for book in books %}
+  <div class="book-card">
+    <img src="{{ book.thumbnail_image_url }}" alt="{{ book.title }}" />
+    <div class="book-info">
+      <h3>{{ book.title }}</h3>
+
+      <!-- Check if the book has a discount -->
+      {% if book.discount_percent > 0 %}
+      <p><s>${{ book.price|floatformat:2 }}</s></p>
+      <p>${{ book.discounted_price|floatformat:2 }}</p>
+      {% else %}
+      <p>${{ book.price|floatformat:2 }}</p>
+      {% endif %}
+
+      <button>Add To Cart</button>
+    </div>
   </div>
-  {% empty %}
+  {% endfor %} {% else %}
   <p>No books available in this category.</p>
-  {% endfor %}
+  {% endif %}
 </div>
 {% endblock %}
